correction on letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  color: #333;
+  font-size: 16px;
 }
 * h1 {
   font-size: 28px;
@@ -31,10 +33,10 @@
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
+  font-size: 15.5px;
+  line-height: 1.5;
   color: #4F4F4F;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
 }
 * li {
   list-style-type: none;
@@ -201,24 +203,24 @@ section:nth-child(1) .container {
   flex-direction: row;
 }
 section:nth-child(1) .container .logo {
-  width: 10%;
+  width: 13%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 section:nth-child(1) .container ul:nth-child(2) {
-  width: 21%;
+  width: 16%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 section:nth-child(1) .container ul:nth-child(2) li a {
-  font-weight: 700;
-  transition: all 0.15s ease-in;
+  transition: all 100ms linear;
+  font-weight: 500;
 }
 section:nth-child(1) .container ul:nth-child(2) li a:hover {
   padding-bottom: 0.25rem;
-  border-bottom: 2.5px solid #FFD400;
+  border-bottom: 1.8px solid #FFD400;
   animation-name: --anime-hover;
 }
 section:nth-child(1) .container .searchBox {
@@ -248,17 +250,19 @@ section:nth-child(1) .container .searchBox .--searchBoxBtn .searchBtn {
   border-radius: 0px 100px 100px 165px;
 }
 section:nth-child(1) .container ul:nth-child(4) {
-  width: 19%;
+  width: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 section:nth-child(1) .container ul:nth-child(4) li .login {
-  font-weight: 700;
   margin-top: 3rem;
   padding: 10px 43px;
   border-radius: 100px;
   border: 2px solid #FFD400;
+  transition: all 100ms linear;
+  font-weight: 500;
+  color: #333;
 }
 section:nth-child(1) .container ul:nth-child(4) .login:hover {
   background-color: #FFD400;
@@ -418,6 +422,7 @@ section:nth-child(2) .container h2 {
 section:nth-child(2) .container h2 span {
   font-family: "Alfa Slab One", cursive;
   color: #FFD400;
+  font-size: 52px;
 }
 section:nth-child(2) .container p:nth-child(3) {
   color: white;
@@ -431,8 +436,8 @@ section:nth-child(2) .container a {
   margin-top: 10px;
   padding: 15px 43px;
   border-radius: 100px;
-  transition: 5ms ease;
-  font-weight: 600;
+  transition: all 100ms linear;
+  font-weight: 500;
 }
 section:nth-child(2) .container a:hover {
   color: black;
