--- a/sass/base/globals.scss
+++ b/sass/base/globals.scss
@@ -6,6 +6,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: $primaryFont;
+  color: #333;
+  font-size: 16px;
 
   h1 {
     font-size: 28px;
@@ -37,10 +39,10 @@
     font-family: $primaryFont;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
+    font-size: 15.5px;
+    line-height: 1.5;
     color: $primaryFontColor;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
   }
 
   li {
