--- a/sass/layouts/navbar.scss
+++ b/sass/layouts/navbar.scss
@@ -15,23 +15,23 @@ section:nth-child(1) {
     display: flex;
     flex-direction: row;
     .logo {
-      width: 10%;
+      width: 13%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
     ul:nth-child(2) {
-      width: 21%;
+      width: 16%;
       display: flex;
       justify-content: space-between;
       align-items: center;
       li a {
-        font-weight: 700;
-        transition: all 0.15s ease-in;
+        transition: all 100ms linear;
+        font-weight: 500;
       }
       li a:hover {
         padding-bottom: 0.25rem;
-        border-bottom: 2.5px solid $primaryColor;
+        border-bottom: 1.8px solid $primaryColor;
         // transition: all 0.2s ease-in;
         animation-name: --anime-hover;
       }
@@ -63,16 +63,18 @@ section:nth-child(1) {
       }
     }
     ul:nth-child(4) {
-      width: 19%;
+      width: 20%;
       display: flex;
       justify-content: center;
       align-items: center;
       li .login {
-        font-weight: 700;
         margin-top: 3rem;
         padding: 10px 43px;
         border-radius: 100px;
         border: 2px solid $primaryColor;
+        transition: all 100ms linear;
+        font-weight: 500;
+        color: #333;
       }
       .login:hover {
         background-color: $primaryColor;
